--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -166,6 +166,7 @@
             border: 1px solid #ccc;
         }
     </style>
-    
+      <center> <p>If you have any additional questions or concerns, please go onto the <a href="http://lawyersforcivilrights.org/gethelp">Lawyers for Civil Rights website</a> for more details. </p>
+      </center>
 </body>
 </html>
