--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -3,13 +3,7 @@
 <head>
     <title>Lawyers for Civil Rights: Is Your Immigration Form Eligible To Be Waived? </title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #white;
-            color: #FB4F00;
-        }
+        
 
         header {
             background-color: #FB4F00;
@@ -17,7 +11,9 @@
             text-align: center;
             padding: 10px;
         }
-
+        body {
+             font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+        }
         .container {
             max-width: 800px;
             margin: 0 auto;
