--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -98,6 +98,7 @@
     <header>
         <h1>Lawyers for Civil Rights: Is Your Immigration Form Eligible To Be Waived? </h1>
     </header>
+    After typing in the name of the form, a "Yes" or "No" will pop up below the type box.
     <div class="container">
         <input type="text" id="inputWord" placeholder="Type the form name (i.e. I-90). Remember the dashes.">
         <button onclick="checkWord()">Check</button>
